consuming the API and endpoint add the related movies to the horizontal scroll of info movies, in addition to fixing the horizontal scroll and always reloading at the beginning

--- a/styles/header.css
+++ b/styles/header.css
@@ -32,7 +32,18 @@
   .header-arrow--white {
     color: var(--blue-light-1);
   }
-  
+
+  #header-equis {
+    position: absolute;
+    font-weight: var(--font-weight-text2);
+    font-size: 25px;
+    cursor: pointer;
+    display: inline-block;
+    left: 85%;
+    top: 53px;
+    color: var(--blue-light-1);
+  }
+
   .header-searchForm {
     display: flex;
     align-items: center;
